--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
+    <!--Main Header-->
     <div class="wrapper">
       <header>
         <h1>Password Generator</h1>
       </header>
-      <div class="card">
+      <div class="card"><!--Generate a password card-->
         <div class="card-header">
           <h2>Generate a Password</h2>
         </div>
         <div class="card-body">
+          <!--Makes the text area where the password will appear-->
           <textarea
             readonly
             id="password"
-            placeholder="Your Secure Password"
+            placeholder="Your Secure Password" <!--Temporary text-->
             aria-label="Generated Password"
           ></textarea>
         </div>
