--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
           <textarea
             readonly
             id="password"
-            placeholder="Your Secure Password" <!--Temporary text-->
+            placeholder="Your Secure Password"
             aria-label="Generated Password"
-          ></textarea>
+          ></textarea><!--Temporary text-->
         </div>
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
