--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         </div>
         <div class="card-body">
           <!--Makes the text area where the password will appear-->
-          <textarea
+          <textarea>
             readonly
             id="password"
             placeholder="Your Secure Password"
             aria-label="Generated Password"
-          ></textarea><!--Temporary text-->
+          </textarea><!--Temporary text-->
         </div>
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
